--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,32 @@ body {
 	border-radius: 30px;
 	text-align: center;
 
+
+}
+
+.box-1 label{
+	display:block;
+}
+.box-1 input{
+	padding: 10px;
+	width: 80%;
 }
 footer {
 	margin-top: 30px;
+}
+.container input {
+	padding:10px;
+	width:90%;
+}
+.button:hover{
+	background-color: blue;
+
+}
+.button {
+	border-radius: 5px;
+}
+
+#main-header{
+	background-color: #333;
+	width: 100%;
 }
